test/langtools/tools/javac/annotations/typeAnnotations/failures/target/VarVariables.out
VarVariables.java:18:9: compiler.err.annotation.type.not.applicable
VarVariables.java:21:32: compiler.err.annotation.type.not.applicable
VarVariables.java:24:14: compiler.err.annotation.type.not.applicable
VarVariables.java:27:14: compiler.err.annotation.type.not.applicable
VarVariables.java:32:14: compiler.err.annotation.type.not.applicable
VarVariables.java:36:37: compiler.err.annotation.type.not.applicable
6 errors
